10957
It actually happens in 2.10 too:
```scala
$ scalac-hash v2.10.0 sandbox/test.scala
sandbox/test.scala:2: error: type mismatch;
 found   : Any
 required: Double
   f"${if (true) 3.5 else 2.5}%.2f"
       ^
one error found
$ cat sandbox/test.scala
object Test {
   f"${if (true) 3.5 else 2.5}%.2f" // note the difference with the one in the description
}
```
